--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
         
     </div>
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
-<script src="./App.js">
-    const heading = React.createElement("h1",{} , "Hello world");
-   const root = ReactDOM.createRoot(document.getElementById("root"))
-    root.render(heading);
 
-</script>
+<script src="./App.js" type="module">
+   
+
+</script> 
 </body>
 </html> 
